--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -4,6 +4,9 @@
   "useMarkdownLinks": true,
   "newLinkFormat": "relative",
   "showUnsupportedFiles": false,
-  "attachmentFolderPath": "02 Documentation/attachments",
-  "showInlineTitle": false
+  "attachmentFolderPath": "01 Project Management/Projects/attachments",
+  "showInlineTitle": false,
+  "defaultViewMode": "preview",
+  "newFileLocation": "folder",
+  "newFileFolderPath": "01 Project Management/Projects"
 }
